src/test/ui/pattern/usefulness/precise_pointer_size_matching.stderr
error[E0004]: non-exhaustive patterns: `isize::MIN..=-6_isize` and `21_isize..=isize::MAX` not covered
  --> $DIR/precise_pointer_size_matching.rs:24:11
   |
LL |     match 0isize {
   |           ^^^^^^ patterns `isize::MIN..=-6_isize` and `21_isize..=isize::MAX` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `isize`

error[E0004]: non-exhaustive patterns: `0_usize` and `21_usize..=usize::MAX` not covered
  --> $DIR/precise_pointer_size_matching.rs:29:11
   |
LL |     match 0usize {
   |           ^^^^^^ patterns `0_usize` and `21_usize..=usize::MAX` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `usize`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
